--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
     </footer>
     
 
-<!-- Модальное окно
+<!-- Модальное окно -->
 
     <div class="backdrop is-hidden" data-modal>
     <div class="modal">
@@ -473,7 +473,7 @@
 
 
 
-    <script src="./js/modal.js"></script> -->
+    <script src="./js/modal.js"></script>
 
 </body>
 </html>
